--- a/.github/workflows/export-and-branch-solution-with-spn-auth.yml
+++ b/.github/workflows/export-and-branch-solution-with-spn-auth.yml
@@ -32,7 +32,7 @@ permissions:
   contents: write
 jobs:
   export-from-dev:
-    runs-on: windows-latest
+    runs-on: self-hosted
     # or you can say runs-on: ubuntu-latest
     env:
       RUNNER_DEBUG: 1
